--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1266,15 +1266,15 @@ button:focus{
     flex-direction: column;
 }
 .add--transaction--form label{
-    font-size:22px;
+    font-size:18px;
     display: flex;
     justify-content: space-between;
-    margin:5px 0;
+    margin: 15px 0;
     color:var(--primaryTextColor)
 }
 .add--transaction--form input{
     font-size:18px;
-    width: 76%;
+    width: 60%;
     border: 0;
     outline: 0;
     border-bottom: 1px solid var(--primaryTextColor);
@@ -1755,6 +1755,14 @@ button:focus{
     opacity:0.8;
 }
 
+.add--transaction--current--price{
+    display:flex;
+    justify-content: space-between;
+    color:var(--primaryTextColor);
+    font-size:18px;
+    margin:15px 0;
+}
+
 .all--assets--list{
     list-style: none;
     padding-left:0;
@@ -1845,6 +1853,7 @@ button:focus{
     border-radius:3px;
     font-size:16px;
     cursor:pointer;
+    font-weight: bold;
     transition: 0.2s;
 }
 
@@ -1867,6 +1876,7 @@ button:focus{
     font-size:16px;
     cursor:pointer;
     transition: 0.2s;
+    font-weight: bold;
 }
 
 .add--asset--accept--button:hover{
