--- a/client/src/App.css
+++ b/client/src/App.css
@@ -240,7 +240,7 @@ html,body{
     }
     .navbar--logo--mobile {
         display:initial;
-        width: 145px;
+        width: 120px;
     }
     .value--block--value--type{
         font-size: 11px;
@@ -318,7 +318,7 @@ html,body{
 
 @media screen and (max-width: 450px) {
     .navbar--logo--mobile{
-        width:100px;
+        width:90px;
     }
     .navbar--wrapper{
         margin: 0 4% 0 4%;
@@ -953,6 +953,7 @@ button:focus{
 
 .graph--container{
     width:100%;
+    min-height:50vh;
 }
 
 .graph--inner--container{
@@ -1090,23 +1091,42 @@ button:focus{
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     border-radius: 5px;
     position:relative;
-    background: var(--primaryBackground)
+    background: var(--primaryBackground);
+    align-self: baseline;
+    min-height: 216px;
 }
 
 .notes--content{
     margin: 0 25px 0 35px;
 }
 
+.transaction--content--dropdown{
+    display: none;
+    opacity:0;
+    transition: 0.5s;
+    transition-delay: 0.2s;
+}
+
+.make--visible{
+    display: initial;
+    opacity:1;
+    transition: 0.5s;
+    transition-delay: 0.2s;
+}
+
+.transaction--toggled{
+    height:160px !important;
+}
+
 .transaction{
     width:100%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
-    height:55px;
+    height:52px;
     margin-bottom:20px;
     position: relative;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     transition:0.2s;
     cursor:pointer;
     margin-top:20px;
@@ -1127,6 +1147,10 @@ button:focus{
     margin-right:30px;
 }
 
+.disable--hover{
+    transform: none !important;
+}
+
 .transaction--value{
     font-weight: 700;
     font-size:15px;
@@ -1145,14 +1169,49 @@ button:focus{
     -ms-backface-visibility:     hidden;
 }
 
-.transaction--change{
+.transaction--amount--paid{
     font-weight: 700;
-    font-size:15px;
     color:var(--secondaryTextColor);
+    font-size:15px;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
 }
+.transaction--change{
+    font-weight: 700;
+    font-size:15px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility:    hidden;
+    -ms-backface-visibility:     hidden;
+}
+
+
+.delete--transaction--button{
+    background:none;
+    border:3px solid var(--buttonBackground);
+    border-radius: 4px;
+    font-size: 14px;
+    padding:4px 35px;
+    color:var(--titleColor);
+    font-weight: bold;
+    cursor: pointer;
+    transition:0.2s;
+}
+
+.delete--transaction--button:hover{
+    background: #f21b3e;
+    border: 3px solid #f21b3e;
+    transition:0.2s;
+    color:white;
+}
+
+
+.transaction--content--dropdown--content--buttons--container{
+    margin-top:13px;
+    margin-right:30px;
+    float:right;
+}
+
 
 .note{
     width:100%;
@@ -1239,6 +1298,44 @@ button:focus{
     background: var(--lightestBackground);
 }
 
+.add--transaction--content{
+    margin:40px 50px;
+    height: 100%;
+}
+
+
+
+
+.open--transaction--modal{
+    width:100%;
+    height:100%;
+    position:absolute;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.open--transaction--container{
+    background:white;
+    width:600px;
+    height:auto;
+    position:fixed;
+    margin-top: -55px;
+    z-index:3;
+    border-radius: 6px;
+    background: var(--lightestBackground);
+}
+
+.open--transaction--content{
+    margin:40px 50px;
+    height: 100%;
+}
+
+
+
+
+
 .add--transaction--buttons--container{
     width:100%;
     flex: 1;
@@ -1247,11 +1344,6 @@ button:focus{
     justify-content: flex-end;
     align-items: center;
     margin-top:25px;
-}
-
-.add--transaction--content{
-    margin:40px 50px;
-    height: 100%;
 }
 
 .add--transaction--form{
