--- a/client/src/App.css
+++ b/client/src/App.css
@@ -176,7 +176,7 @@ html,body{
     }
     to{
         width: 200px;
-        height: 200px;
+        height: 151px;
         opacity:1;
     }
 }
@@ -1140,8 +1140,9 @@ button:focus{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin-left:30px;
-    margin-right:30px;
+    margin-left:5%;
+    margin-right:5%;
+    width:90%;
 }
 
 .disable--hover{
@@ -1155,6 +1156,8 @@ button:focus{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    text-align: end;
+    width:30%;
 }
 
 .transaction--amount{
@@ -1164,6 +1167,7 @@ button:focus{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    width:30%;
 }
 
 .transaction--amount--paid{
@@ -1173,6 +1177,12 @@ button:focus{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    width:30%;
+    text-align: end;
+}
+
+.align-left{
+    text-align: start;
 }
 .transaction--change{
     font-weight: 700;
@@ -1180,11 +1190,10 @@ button:focus{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    width:30%;
+    text-align: end;
 }
 
-.margin--fix{
-    margin-left:-82px;
-}
 
 .delete--transaction--button{
     background:none;
@@ -1463,9 +1472,6 @@ button:focus{
     .note--title{
         font-size:13px;
     }
-    .margin--fix{
-        margin-left: -71px;
-    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -1543,9 +1549,6 @@ button:focus{
         padding: 6px 30px;
         font-size: 15px;
     }
-    .margin--fix {
-        margin-left: -66px;
-    }
 
 }
 
@@ -1622,9 +1625,6 @@ button:focus{
     }
     .transaction--amount--paid{
         width:62px;
-    }
-    .margin--fix{
-        margin-left: -43px;
     }
 }
 
@@ -2248,6 +2248,15 @@ button:focus{
     .add--asset--select--filter{
         margin-bottom:30px;
     }
+    .account--page--container{
+        width:90% !important;
+    }
+    .information--text{
+        font-size:14px;
+    }
+    .information--title{
+        font-size:15px;
+    }
 }
 
 @media screen and (max-width: 470px) {
@@ -2652,11 +2661,100 @@ html{
 
 
 
+/* ############################################## START OF ACCOUNT PAGE ################################################  */
+
+
+
+.account--page{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.account--page--container{
+    width: 80%;
+    margin-top:30px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+    border-radius: 5px;
+    background:var(--primaryBackground);
+    color:var(--primaryTextColor);
+}
+
+.account--page--inner--container{
+    padding:2% 5%;
+}
+
+.information--title--container{
+    border-bottom: 1px solid var(--primaryLine);
+    height: 35px;
+}
+
+.information--title{
+    font-weight: bold;
+}
+
+.information--content{
+    padding:15px 22px;
+}
+
+.same-row{
+    display:flex;
+    align-items: center;
+}
+
+.switch--button{
+    margin-left:20px;
+}
+
+.switch{
+    width:42px;
+    height:21px;
+    background: none;
+    border:3px solid var(--buttonBackground);
+    border-radius:25px;
+    position: relative;
+    cursor: pointer;
+}
+
+.ball{
+    width:21px;
+    background: var(--buttonBackground);
+    height:21px;
+    border-radius:50%;
+    left:-1px;
+    position: absolute;
+    transition:0.2s;
+}
+
+.switch:hover .ball{
+    background: var(--buttonBackgroundHover);
+}
+
+.ball-move{
+    transform: translateX(23px);
+    transition:0.2s;
+}
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ############################################## END OF ACCOUNT PAGE ################################################  */
 
 
 
