--- a/client/src/App.css
+++ b/client/src/App.css
@@ -430,6 +430,8 @@ html,body{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    opacity: 0;
+
 }
 
 .makeGreen{
@@ -1034,7 +1036,8 @@ button:focus{
 .transactions--and--notes--content{
     display:flex;
     justify-content: space-between;
-    color:var(--secondaryTextColor)
+    color:var(--secondaryTextColor);
+    align-items: flex-start;
 }
 
 .transactions--container{
@@ -1042,7 +1045,8 @@ button:focus{
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     border-radius: 5px;
     position:relative;
-    background: var(--primaryBackground)
+    background: var(--primaryBackground);
+    min-height: 216px;
 }
 
 .transactions--content{
@@ -1083,7 +1087,7 @@ button:focus{
 
 .notes--container--title{
     font-weight:700;
-    margin-left:35px;
+    margin: 16px 0 0 35px;
 }
 
 .notes--container{
@@ -1103,12 +1107,15 @@ button:focus{
 .transaction--content--dropdown{
     opacity:0;
     transition: 0.1s;
+    visibility: hidden;
 }
 
+
 .make--visible{
-    opacity:1;
-    transition: 0.5s;
-    transition-delay: 0.2s;
+    opacity:1 !important;
+    transition: 0.5s !important;
+    transition-delay: 0.2s !important;
+    visibility: visible !important;
 }
 
 .transaction--toggled{
@@ -1124,10 +1131,11 @@ button:focus{
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    transition:0.2s;
+    transition:  height 0.2s, transform 0.2s;
     cursor:pointer;
     margin-top:20px;
-    background: var(--lightestBackground)
+    background: var(--lightestBackground);
+    transform:perspective(1px);
 }
 
 .transaction:hover{
@@ -1214,6 +1222,25 @@ button:focus{
     color:white;
 }
 
+.delete--note--button{
+    background:none;
+    border:3px solid var(--buttonBackground);
+    border-radius: 4px;
+    font-size: 14px;
+    padding:4px 35px;
+    color:var(--titleColor);
+    font-weight: bold;
+    cursor: pointer;
+    transition:0.2s;
+}
+
+.delete--note--button:hover{
+    background: #f21b3e;
+    border: 3px solid #f21b3e;
+    transition:0.2s;
+    color:white;
+}
+
 
 .transaction--content--dropdown--content--buttons--container{
     margin-top:13px;
@@ -1223,27 +1250,24 @@ button:focus{
 
 
 .note{
-    width:100%;
+    width: 100%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
-    height:35px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
     position: relative;
     border-radius: 5px;
+    transition:  height 0.2s, transform 0.2s;
+    cursor: pointer;
+    margin-top: 20px;
+    background: white;
+    background: var(--lightestBackground);
+    overflow-wrap: break-word;
+    min-height: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    transition:0.2s;
-    cursor:pointer;
-    margin-top:20px;
-    white-space: nowrap;
-    overflow: hidden;
-    background: var(--lightestBackground);
+    transform: perspective(1px);
 }
 
 .note--content{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
     margin-left:20px;
     margin-right:20px;
 }
@@ -1252,6 +1276,12 @@ button:focus{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    width: 100%;
+    overflow: hidden;
+}
+
+.note--date{
+    font-size:12px;
 }
 
 .note:hover{
@@ -1259,6 +1289,32 @@ button:focus{
     transition:0.2s;
     transform:scale(1.01)perspective(1px);
 }
+
+.note--content--dropdown{
+    height:0;
+    transition:0.2s;
+}
+
+.note--content--dropdown--content{
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.1s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.make--dropdown--visible{
+    height:60px;
+    transition:0.2s;
+}
+
+
+
+
+
 
 .add--note--button{
     font-family:Nunito,  "Nunito ExtraBold",sans-serif;
@@ -1270,7 +1326,7 @@ button:focus{
     cursor: pointer;
     padding: 7px 15px;
     margin-right: 25px;
-    margin-top: 4px;
+    margin-top:12px;
     transition: 0.2s;
 }
 
@@ -1677,6 +1733,7 @@ button:focus{
 .add--asset--container{
     height: 85%;
     width: 80%;
+    min-height: 550px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     border-radius: 5px;
     position: absolute;
@@ -1824,6 +1881,7 @@ button:focus{
     height: 100%;
     width: 100%;
     background: var(--transparentBackground);
+    z-index: 2;
 }
 
 .add--asset--form--loader{
@@ -1890,8 +1948,9 @@ button:focus{
 }
 
 .makeRed{
-    color:red !important;
+    color:var(--primaryRed) !important;
 }
+
 
 .add--asset--input--form {
     display:flex;
@@ -1943,12 +2002,13 @@ button:focus{
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 50px;
 }
 
 .add--asset--cancel--button{
     margin-right:20px;
-    padding:4px 40px;
+    width: 120px;
+    height: 38px;
     font-family:Nunito, "Nunito ExtraBold",sans-serif;
     color: var(--titleColor);
     border:4px solid var(--buttonBackground);
@@ -1968,8 +2028,8 @@ button:focus{
 }
 
 .add--asset--accept--button{
-    margin-left:20px;
-    padding:8px 55px;
+    width: 120px;
+    height: 38px;
     margin-right: 10%;
     font-family:Nunito, "Nunito ExtraBold",sans-serif;
     color:white;
@@ -1980,6 +2040,7 @@ button:focus{
     cursor:pointer;
     transition: 0.2s;
     font-weight: bold;
+    position: relative;
 }
 
 .add--asset--accept--button:hover{
@@ -2139,12 +2200,14 @@ button:focus{
     }
     .add--asset--cancel--button{
         margin-right: 13px;
-        padding: 3px 30px;
+        width: 105px;
+        height: 35px;
         font-size: 14px;
     }
     .add--asset--accept--button{
         margin-left: 13px;
-        padding: 7px 45px;
+        width: 105px;
+        height: 35px;
         font-size: 14px;
     }
     .add-asset--content--left--title{
@@ -2279,12 +2342,10 @@ button:focus{
         margin-right: 6%;
     }
     .add--asset--cancel--button {
-        padding: 4px 25px;
         border: 3px solid var(--buttonBackground);
         font-size: 13px;
     }
     .add--asset--accept--button {
-        padding: 7px 40px;
         margin-right: 6%;
         font-size: 13px;
     }
@@ -2631,6 +2692,7 @@ html {
     --titleColor:#725EF2;
     --linksHover: #6876ff;
     --primaryLine: rgb(220, 220, 220);
+    --primaryRed:red;
 }
 
 
@@ -2649,6 +2711,7 @@ html[data-theme="DARK"] {
     --titleColor: #018096;
     --linksHover:#018096;
     --primaryLine: rgba(220, 220, 220, 0.2);
+    --primaryRed:#ff4d4d;
 }
 
 html{
@@ -2726,9 +2789,14 @@ html{
     transition:0.2s;
 }
 
-.switch:hover .ball{
-    background: var(--buttonBackgroundHover);
+.switch-gray{
+    border:3px solid gray;
 }
+
+.ball-gray{
+    background: gray;
+}
+
 
 .ball-move{
     transform: translateX(23px);
@@ -2756,6 +2824,24 @@ html{
 
 /* ############################################## END OF ACCOUNT PAGE ################################################  */
 
+.fadeInText{
+    animation-name:fadeInAnim;
+    animation-duration:1s;
+    animation-delay: 0.6s;
+    animation-fill-mode: forwards;
+}
 
-
-
+.fade-enter {
+    opacity: 0;
+}
+.fade-enter-active {
+    opacity: 1;
+    transition: opacity 1s;
+}
+.fade-exit {
+    opacity: 1;
+}
+.fade-exit-active {
+    opacity: 0;
+    transition: opacity 1s;
+}
