--- a/client/src/App.css
+++ b/client/src/App.css
@@ -629,7 +629,6 @@ html,body{
 
 .login--container{
     min-width:500px;
-    max-width:500px;
     background:white;
     border-radius:15px;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.40);
@@ -794,6 +793,7 @@ button:focus{
 
 .register--container{
     min-width:500px;
+    max-width:500px;
     background:white;
     border-radius:15px;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
@@ -812,6 +812,7 @@ button:focus{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom:15px;
 }
 
 .register--content--title{
@@ -2814,12 +2815,26 @@ html{
 
 
 
+.error--message p{
+    color:red;
+    font-size:12px;
+    margin:0;
+    text-align: center;
+}
+.success--message p{
+    color:green;
+    font-size:12px;
+    margin:0;
+    text-align: center;
+}
 
 
-
-
-
-
+.error--message{
+    margin-top:10px;
+}
+.success--message{
+    margin-top:10px;
+}
 
 
 
