landing page image reposition

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2606,7 +2606,7 @@ button:focus{
 
 .landing--page--first--section--container--right--image{
     width:92%;
-    margin-top:5%;
+    margin-top:-50px;
 }
 
 
