--- a/client/src/App.css
+++ b/client/src/App.css
@@ -438,9 +438,46 @@ html,body{
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
     transition:0.2s;
+    opacity: 0;
+    animation-name:fadeIn;
+    animation-duration:0.6s;
+    animation-fill-mode: forwards;
+    animation-delay:0.5s;
 }
 
+.tooltip{
+    position: absolute;
+    top:-35px;
+    left:-35px;
+    color:white;
+    background: #5c5c5c;
+    padding: 5px 10px;
+    transition: 0.3s;
+    display: flex;
+    opacity: 0;
+    border-radius: 3px;
+    font-weight: normal;
+    font-size:13px;
+    white-space: nowrap;
+}
 
+.asset--change:hover .tooltip--change{
+    transition: 0.3s;
+    transition-delay: 0.5s;
+    opacity:1;
+}
+
+.asset--value:hover .tooltip--value{
+    transition: 0.3s;
+    transition-delay: 0.5s;
+    opacity:1;
+}
+
+.asset--amount:hover .tooltip--amount{
+    transition: 0.3s;
+    transition-delay: 0.5s;
+    opacity:1;
+}
 
 .makeGreen{
   color:#21AC00 ;
@@ -594,12 +631,14 @@ html,body{
   font-weight: 700;
     color:var(--secondaryTextColor);
     width:20%;
+    position: relative;
 }
 
 .asset--amount{
   font-weight: 700;
   color:var(--secondaryTextColor);
-    width:20%
+    width:20%;
+    position: relative;
 }
 
 .asset--change{
@@ -608,6 +647,7 @@ html,body{
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility:    hidden;
     -ms-backface-visibility:     hidden;
+    position: relative;
 }
 
 .asset--image{
